--- a/index.html
+++ b/index.html
@@ -171,9 +171,9 @@
             </h3>
         </div>
         <div class="social" id="social">
-            <a href=""><img src="instalogo.png" alt=""></a>
-            <a href=""><img src="githublogo.png" alt=""></a>
-            <a href=""><img src="linkdinlogo.png" alt=""></a>
+            <a href="https://www.instagram.com/sujaljain016?igsh=ZGlteHVqaGN5OWJ1" target="_blank" rel="noopener noreferrer"><img src="instalogo.png" alt=""></a>
+            <a href="https://github.com/sujal-jain-activities" target="_blank" rel="noopener noreferrer"><img src="githublogo.png" alt=""></a>
+            <a href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile" target="_blank" rel="noopener noreferrer" ><img src="linkdinlogo.png" alt=""></a>
             
         </div>
     </footer>
