--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <h3><a href="#page1">HOME</a></h3>
                 <h3><a href="#elem">ABOUT ME</a></h3>
                 <h3><a href="#elem2">PROJECTS</a></h3>
-                <h3><a href="#elem3">CONTECT ME</a></h3>
+                <h3><a href="#elem3">CONTACT ME</a></h3>
                
             </div>
             <h3><i class="ri-menu-3-line"></i></h3>
